--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".RoutineActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ConfigMedicationActivity"
             android:exported="false" />
 
