--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,9 @@
             android:name=".ReminderReceiver"
             android:exported="false" />
 
+        <activity android:name=".ProfileActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
